# inadc-ows

./: Dockerfile  pyproject.toml
ows_config/: ows_cfg.py
