[project]
name = "ina-dc-ows"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datacube-ows==1.9.13",
    "gunicorn",
    "psycopg2",
    "datacube==1.9.18",
    "Pillow",
    "rasterio",
    "netCDF4",
    "gdal==3.12.0.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
